--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,10 @@
+def googleServicesJsonFile = file('app/google-services.json.template')
+def googleServicesJsonOutputFile = file('app/google-services.json')
+def googleApiKey = System.getenv('GOOGLE_API_KEY')
+
+googleServicesJsonOutputFile.text = googleServicesJsonFile.text.replace('GOOGLE_API_KEY_PLACEHOLDER', googleApiKey)
+
+
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
